# persona-vector-radius

./: .gitignore  README.md  pyproject.toml
artifacts/: evil.json  hallucination.json  sycophancy.json
configs/: default.json  llama31_8b_reduced.json  llama32_3b_reduced.json  qwen25_14b_reduced.json  qwen25_3b_reduced.json  qwen25_3b_wide.json  qwen25_7b_fine_evil.json  qwen25_7b_fine_hallucination.json  qwen25_7b_fine_sycophancy.json  qwen25_7b_trait_geometry.json  qwen25_7b_wide.json
docs/: a100_runbook.md
notebooks/: qwen7_results_analysis.ipynb
runs/qwen25_3b_layer26_response/: eval_records.jsonl
runs/qwen25_3b_layer26_response/analysis/: coherence_failure_examples.csv  diameters.csv  score_curves.csv  summary.json  trait_cosine_similarity.csv
runs/qwen25_7b_layer20_fine_evil/: eval_records.jsonl
runs/qwen25_7b_layer20_fine_evil/analysis/: coherence_failure_examples.csv  diameters.csv  score_curves.csv  summary.json
runs/qwen25_7b_layer20_fine_hallucination/: eval_records.jsonl
runs/qwen25_7b_layer20_fine_hallucination/analysis/: coherence_failure_examples.csv  diameters.csv  score_curves.csv  summary.json
runs/qwen25_7b_layer20_fine_sycophancy/: eval_records.jsonl
runs/qwen25_7b_layer20_response/: eval_records.jsonl  normalization.pt
slides/: persona_vector_radius.tex  persona_vector_radius_study_guide.md
trait_steering_tolerance/: __init__.py  analysis.py  artifacts.py  cli.py  config.py  diagnostics.py  evaluation.py  extraction.py  io_utils.py  judge.py  llm_client.py  runtime.py  vectors.py
(+13 files in other folders)
