[project]
name = "trait-steering-tolerance"
version = "0.1.0"
description = "Measure coherent steering ranges for trait-specific persona vectors."
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.29",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "openai>=1.30",
  "pandas>=2.0",
  "torch>=2.1",
  "tqdm>=4.66",
  "transformers>=4.44",
]

[project.scripts]
tst = "trait_steering_tolerance.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trait_steering_tolerance*"]
